<resources>
    <string name="app_name">Zvue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Subscribe</string>
    <string name="menu_gallery">Recharge</string>
    <string name="menu_slideshow">Transfer Coins</string>

    <string name="home_second">Home Second</string>
    <string name="kota_the_friend">Search Songs</string>
    <string name="audio">Audio-000Zeshana-0x</string>
    <string name="name">N1+91</string>
    <string name="password">Password</string>
    <string name="loginBtnStr">Login</string>
    <string name="forgetTxtStr">Forget Password?</string>
    <string name="facebookStr">Continue with facebook</string>
    <string name="gmailStr">Continue with Google</string>
    <string name="twitterStr">Continue with Twitter</string>
    <string name="emailStr">Email</string>
    <string name="mobileStr">Mobile No</string>
    <string name="signUpStr">"Sign Up "</string>
    <string name="watchNowStr">Watch now</string>
    <string name="preview">Preview</string>
    <string name="myList">My List</string>
    <string name="homeStr">Home</string>
    <string name="sigUpNameStr">Name</string>
    <string name="BlackMirrorStr">Black Mirror</string>
    <string name="shareStr">Share</string>
    <string name="downloadStr">Downloads</string>
    <string name="moreLikeThisStr">More Like This</string>
    <string name="descStr">Hello Kunal Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="topPicksStr">Top Picks</string>
    <string name="recentlyPlayedStr">Recently Played</string>
    <string name="trendingSongsStr">Trending Songs</string>
    <string name="videosStr">Videos</string>
    <string name="musicStr">Music</string>
    <string name="nothingInDownloadsStr">Nothing In Downloads</string>
    <string name="tellYourFreindStr">Tell your friend about zvue</string>
    <string name="copyLinkStr">Copy Link</string>
    <string name="fbStr">Facebook</string>
    <string name="whatsappStr">Whatsapp</string>
    <string name="otherStr">Other</string>
    <string name="signOutStr">Sign Out</string>
    <string name="helpStr">Help?</string>
    <string name="accountStr">Account</string>
    <string name="appSettingStr">App Setting</string>
    <string name="membershipStr">Membership Details</string>
    <string name="demoEmailStr">Email: zvue2020@gmail.com</string>
    <string name="demoPasswordStr">Password: ******</string>
    <string name="changePwdStr">Change Password</string>
    <string name="changeEmailStr">Change Email</string>
    <string name="changeNumStr">Change Number</string>
    <string name="visaStr">Visa **** **** **** 1111</string>
    <string name="updatePayInfoStr">Update payment info</string>
    <string name="billingStr">Billing Details</string>
    <string name="promoStr">Promo Code</string>
    <string name="membershipBtnStr">Memebership</string>
    <string name="VideoPlaybackStr">Video Playback</string>
    <string name="MobileDataUsageStr">Mobile Data Usage</string>
    <string name="automaticStr">Automatic</string>
    <string name="notificationStr">Notification</string>
    <string name="allowNotificationStr">Allow Notification</string>
    <string name="wifiOnlyStr">Wifi Only</string>
    <string name="downloadOnlyStr">Downlaods Quality</string>
    <string name="standardStr">Standard</string>
    <string name="legalStr">Legal</string>
    <string name="privacyPolicyStr">Privacy Policy</string>
    <string name="termsOfUseStr">Terms of Use</string>
    <string name="findHelpStr">Find Help</string>
    <string name="helpCenterStr">Help Center</string>
    <string name="UpdatePaymentMethodStr">Update Payment Method</string>
    <string name="requestAFileStr">Request A File</string>
    <string name="updatePasswordStr">Update Password</string>
    <string name="cancelAccountStr">Cancel Account</string>
    <string name="privacyStr">Privacy</string>
    <string name="contactStr">Contact\nZuve Customer Service</string>
    <string name="videoSettingStr">Video Setting</string>
    <string name="youtTextWillBeHereStr">Your text will be here</string>
    <string name="privacyPolicyDescStr">"Hello Amit Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop "</string>
</resources>
