<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/memberShipMenu"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_info_details"
            android:iconTint="@android:color/white"
            android:title="@string/membershipStr" />
        <item
            android:visible="false"
            android:id="@+id/helpMenu"
            android:icon="@android:drawable/ic_menu_info_details"
            android:iconTint="@android:color/white"
            android:title="@string/helpStr" />
        <item
            android:id="@+id/appSettingMenu"
            android:icon="@android:drawable/ic_menu_info_details"
            android:iconTint="@android:color/white"
            android:title="@string/appSettingStr" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:actionLayout="@layout/bottom_lin"
            android:title=""></item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/videoSettingMenu"
            app:showAsAction="always"
            android:icon="@mipmap/ic_scanner"
            android:iconTint="@android:color/white"
            android:title="@string/videoSettingStr" />
        <item
            android:id="@+id/privacyPolicyMenuID"
            android:icon="@mipmap/ic_scanner"
            android:iconTint="@android:color/white"
            android:title="@string/privacyPolicyStr" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:actionLayout="@layout/bottom_lin"
            android:title=""></item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/termsOfUserMenuID"
            app:showAsAction="always"
            android:icon="@mipmap/ic_scanner"
            android:iconTint="@android:color/white"
            android:title="@string/termsOfUseStr" />
        <item
            android:icon="@mipmap/ic_scanner"
            android:iconTint="@android:color/white"
            android:title="@string/helpStr" />

    </group>
</menu>
